--- a/webclient/package.json
+++ b/webclient/package.json
@@ -12,21 +12,21 @@
     "@rainbow-me/rainbowkit": "^2.0.1",
     "@tanstack/react-query": "^5.24.1",
     "ethers": "^6.13.5",
-    "next": "14.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "next": "^15.2.4",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "viem": "^2.7.16",
     "wagmi": "^2.5.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^18",
+    "@types/node": "^20.17.30",
+    "@types/react": "^18.3.20",
     "@types/react-dom": "^18",
-    "eslint": "^9",
+    "eslint": "^8.57.1",
     "eslint-config-next": "14.1.0",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "typescript": "^5.8.3"
   }
 }
