--- a/webclient/package.json
+++ b/webclient/package.json
@@ -11,10 +11,13 @@
   "dependencies": {
     "@rainbow-me/rainbowkit": "^2.0.1",
     "@tanstack/react-query": "^5.24.1",
+    "clsx": "^2.1.1",
     "ethers": "^6.13.5",
+    "flowbite-react": "^0.11.7",
     "next": "^15.2.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "tailwind-merge": "^3.2.0",
     "viem": "^2.7.16",
     "wagmi": "^2.5.7"
   },
